update sealed secret

--- a/sealed-secret/sealed-secret/base/manifests.yaml
+++ b/sealed-secret/sealed-secret/base/manifests.yaml
@@ -7,10 +7,10 @@ metadata:
   namespace: kube-system
   labels:
     app.kubernetes.io/name: sealed-secrets
-    helm.sh/chart: sealed-secrets-2.12.0
+    helm.sh/chart: sealed-secrets-2.16.1
     app.kubernetes.io/instance: sealed-secrets
     app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/version: v0.23.1
+    app.kubernetes.io/version: 0.27.1
     app.kubernetes.io/part-of: sealed-secrets
 ---
 # Source: sealed-secrets/templates/cluster-role.yaml
@@ -20,11 +20,12 @@ metadata:
   name: secrets-unsealer
   labels:
     app.kubernetes.io/name: sealed-secrets
-    helm.sh/chart: sealed-secrets-2.12.0
+    helm.sh/chart: sealed-secrets-2.16.1
     app.kubernetes.io/instance: sealed-secrets
     app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/version: v0.23.1
+    app.kubernetes.io/version: 0.27.1
     app.kubernetes.io/part-of: sealed-secrets
+  annotations:
 rules:
   - apiGroups:
       - bitnami.com
@@ -66,11 +67,12 @@ metadata:
   name: sealed-secrets-controller
   labels:
     app.kubernetes.io/name: sealed-secrets
-    helm.sh/chart: sealed-secrets-2.12.0
+    helm.sh/chart: sealed-secrets-2.16.1
     app.kubernetes.io/instance: sealed-secrets
     app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/version: v0.23.1
+    app.kubernetes.io/version: 0.27.1
     app.kubernetes.io/part-of: sealed-secrets
+  annotations:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -89,11 +91,12 @@ metadata:
   namespace: kube-system
   labels:
     app.kubernetes.io/name: sealed-secrets
-    helm.sh/chart: sealed-secrets-2.12.0
+    helm.sh/chart: sealed-secrets-2.16.1
     app.kubernetes.io/instance: sealed-secrets
     app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/version: v0.23.1
+    app.kubernetes.io/version: 0.27.1
     app.kubernetes.io/part-of: sealed-secrets
+  annotations:
 rules:
   - apiGroups:
       - ""
@@ -119,10 +122,10 @@ metadata:
   namespace: kube-system
   labels:
     app.kubernetes.io/name: sealed-secrets
-    helm.sh/chart: sealed-secrets-2.12.0
+    helm.sh/chart: sealed-secrets-2.16.1
     app.kubernetes.io/instance: sealed-secrets
     app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/version: v0.23.1
+    app.kubernetes.io/version: 0.27.1
     app.kubernetes.io/part-of: sealed-secrets
 rules:
   - apiGroups:
@@ -153,11 +156,12 @@ metadata:
   namespace: kube-system
   labels:
     app.kubernetes.io/name: sealed-secrets
-    helm.sh/chart: sealed-secrets-2.12.0
+    helm.sh/chart: sealed-secrets-2.16.1
     app.kubernetes.io/instance: sealed-secrets
     app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/version: v0.23.1
+    app.kubernetes.io/version: 0.27.1
     app.kubernetes.io/part-of: sealed-secrets
+  annotations:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -176,19 +180,20 @@ metadata:
   namespace: kube-system
   labels:
     app.kubernetes.io/name: sealed-secrets
-    helm.sh/chart: sealed-secrets-2.12.0
+    helm.sh/chart: sealed-secrets-2.16.1
     app.kubernetes.io/instance: sealed-secrets
     app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/version: v0.23.1
+    app.kubernetes.io/version: 0.27.1
     app.kubernetes.io/part-of: sealed-secrets
+  annotations:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
   name: sealed-secrets-controller-service-proxier
 subjects:
-- apiGroup: rbac.authorization.k8s.io
-  kind: Group
-  name: system:authenticated
+  - apiGroup: rbac.authorization.k8s.io
+    kind: Group
+    name: system:authenticated
 ---
 # Source: sealed-secrets/templates/service.yaml
 apiVersion: v1
@@ -198,10 +203,10 @@ metadata:
   namespace: kube-system
   labels:
     app.kubernetes.io/name: sealed-secrets
-    helm.sh/chart: sealed-secrets-2.12.0
+    helm.sh/chart: sealed-secrets-2.16.1
     app.kubernetes.io/instance: sealed-secrets
     app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/version: v0.23.1
+    app.kubernetes.io/version: 0.27.1
     app.kubernetes.io/part-of: sealed-secrets
 spec:
   type: ClusterIP
@@ -209,6 +214,31 @@ spec:
     - name: http
       port: 8080
       targetPort: http
+      nodePort: null
+  selector:
+    app.kubernetes.io/name: sealed-secrets
+    app.kubernetes.io/instance: sealed-secrets
+---
+# Source: sealed-secrets/templates/service.yaml
+apiVersion: v1
+kind: Service
+metadata:
+  name: sealed-secrets-controller-metrics
+  namespace: kube-system
+  labels:
+    app.kubernetes.io/name: sealed-secrets
+    helm.sh/chart: sealed-secrets-2.16.1
+    app.kubernetes.io/instance: sealed-secrets
+    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/version: 0.27.1
+    app.kubernetes.io/part-of: sealed-secrets
+    app.kubernetes.io/component: metrics
+spec:
+  type: ClusterIP
+  ports:
+    - name: metrics
+      port: 8081
+      targetPort: metrics
       nodePort: null
   selector:
     app.kubernetes.io/name: sealed-secrets
@@ -222,11 +252,12 @@ metadata:
   namespace: kube-system
   labels:
     app.kubernetes.io/name: sealed-secrets
-    helm.sh/chart: sealed-secrets-2.12.0
+    helm.sh/chart: sealed-secrets-2.16.1
     app.kubernetes.io/instance: sealed-secrets
     app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/version: v0.23.1
+    app.kubernetes.io/version: 0.27.1
     app.kubernetes.io/part-of: sealed-secrets
+  annotations:
 spec:
   replicas: 1
   selector:
@@ -250,11 +281,14 @@ spec:
             - --update-status
             - --key-prefix
             - "sealed-secrets-key"
-          image: docker.io/bitnami/sealed-secrets-controller:v0.23.1
+          image: docker.io/bitnami/sealed-secrets-controller:0.27.1
           imagePullPolicy: IfNotPresent
+          env:
           ports:
             - containerPort: 8080
               name: http
+            - containerPort: 8081
+              name: metrics
           livenessProbe:
             failureThreshold: 3
             initialDelaySeconds: 0
