--- a/chaos-mesh/crd/base/crds.yaml
+++ b/chaos-mesh/crd/base/crds.yaml
@@ -1,12 +1,12 @@
 ---
-# Source: crds/chaos-mesh.org_awschaos.yaml
+# Source: chaos-mesh/crds/chaos-mesh.org_awschaos.yaml
 
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.4.1
+    controller-gen.kubebuilder.io/version: v0.6.1
   creationTimestamp: null
   name: awschaos.chaos-mesh.org
 spec:
@@ -142,13 +142,13 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
-# Source: crds/chaos-mesh.org_azurechaos.yaml
+# Source: chaos-mesh/crds/chaos-mesh.org_azurechaos.yaml
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.4.1
+    controller-gen.kubebuilder.io/version: v0.6.1
   creationTimestamp: null
   name: azurechaos.chaos-mesh.org
 spec:
@@ -285,13 +285,13 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
-# Source: crds/chaos-mesh.org_blockchaos.yaml
+# Source: chaos-mesh/crds/chaos-mesh.org_blockchaos.yaml
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.4.1
+    controller-gen.kubebuilder.io/version: v0.6.1
   creationTimestamp: null
   name: blockchaos.chaos-mesh.org
 spec:
@@ -496,13 +496,13 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
-# Source: crds/chaos-mesh.org_dnschaos.yaml
+# Source: chaos-mesh/crds/chaos-mesh.org_dnschaos.yaml
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.4.1
+    controller-gen.kubebuilder.io/version: v0.6.1
   creationTimestamp: null
   name: dnschaos.chaos-mesh.org
 spec:
@@ -696,13 +696,13 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
-# Source: crds/chaos-mesh.org_gcpchaos.yaml
+# Source: chaos-mesh/crds/chaos-mesh.org_gcpchaos.yaml
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.4.1
+    controller-gen.kubebuilder.io/version: v0.6.1
   creationTimestamp: null
   name: gcpchaos.chaos-mesh.org
 spec:
@@ -843,13 +843,13 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
-# Source: crds/chaos-mesh.org_httpchaos.yaml
+# Source: chaos-mesh/crds/chaos-mesh.org_httpchaos.yaml
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.4.1
+    controller-gen.kubebuilder.io/version: v0.6.1
   creationTimestamp: null
   name: httpchaos.chaos-mesh.org
 spec:
@@ -1121,13 +1121,13 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
-# Source: crds/chaos-mesh.org_iochaos.yaml
+# Source: chaos-mesh/crds/chaos-mesh.org_iochaos.yaml
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.4.1
+    controller-gen.kubebuilder.io/version: v0.6.1
   creationTimestamp: null
   name: iochaos.chaos-mesh.org
 spec:
@@ -1419,13 +1419,13 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
-# Source: crds/chaos-mesh.org_jvmchaos.yaml
+# Source: chaos-mesh/crds/chaos-mesh.org_jvmchaos.yaml
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.4.1
+    controller-gen.kubebuilder.io/version: v0.6.1
   creationTimestamp: null
   name: jvmchaos.chaos-mesh.org
 spec:
@@ -1647,13 +1647,13 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
-# Source: crds/chaos-mesh.org_kernelchaos.yaml
+# Source: chaos-mesh/crds/chaos-mesh.org_kernelchaos.yaml
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.4.1
+    controller-gen.kubebuilder.io/version: v0.6.1
   creationTimestamp: null
   name: kernelchaos.chaos-mesh.org
 spec:
@@ -1869,13 +1869,13 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
-# Source: crds/chaos-mesh.org_networkchaos.yaml
+# Source: chaos-mesh/crds/chaos-mesh.org_networkchaos.yaml
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.4.1
+    controller-gen.kubebuilder.io/version: v0.6.1
   creationTimestamp: null
   name: networkchaos.chaos-mesh.org
 spec:
@@ -2230,13 +2230,13 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
-# Source: crds/chaos-mesh.org_physicalmachinechaos.yaml
+# Source: chaos-mesh/crds/chaos-mesh.org_physicalmachinechaos.yaml
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.4.1
+    controller-gen.kubebuilder.io/version: v0.6.1
   creationTimestamp: null
   name: physicalmachinechaos.chaos-mesh.org
 spec:
@@ -2993,13 +2993,13 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
-# Source: crds/chaos-mesh.org_physicalmachines.yaml
+# Source: chaos-mesh/crds/chaos-mesh.org_physicalmachines.yaml
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.4.1
+    controller-gen.kubebuilder.io/version: v0.6.1
   creationTimestamp: null
   name: physicalmachines.chaos-mesh.org
 spec:
@@ -3039,13 +3039,13 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
-# Source: crds/chaos-mesh.org_podchaos.yaml
+# Source: chaos-mesh/crds/chaos-mesh.org_podchaos.yaml
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.4.1
+    controller-gen.kubebuilder.io/version: v0.6.1
   creationTimestamp: null
   name: podchaos.chaos-mesh.org
 spec:
@@ -3232,13 +3232,13 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
-# Source: crds/chaos-mesh.org_podhttpchaos.yaml
+# Source: chaos-mesh/crds/chaos-mesh.org_podhttpchaos.yaml
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.4.1
+    controller-gen.kubebuilder.io/version: v0.6.1
   creationTimestamp: null
   name: podhttpchaos.chaos-mesh.org
 spec:
@@ -3397,13 +3397,13 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
-# Source: crds/chaos-mesh.org_podiochaos.yaml
+# Source: chaos-mesh/crds/chaos-mesh.org_podiochaos.yaml
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.4.1
+    controller-gen.kubebuilder.io/version: v0.6.1
   creationTimestamp: null
   name: podiochaos.chaos-mesh.org
 spec:
@@ -3573,13 +3573,13 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
-# Source: crds/chaos-mesh.org_podnetworkchaos.yaml
+# Source: chaos-mesh/crds/chaos-mesh.org_podnetworkchaos.yaml
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.4.1
+    controller-gen.kubebuilder.io/version: v0.6.1
   creationTimestamp: null
   name: podnetworkchaos.chaos-mesh.org
 spec:
@@ -3775,13 +3775,13 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
-# Source: crds/chaos-mesh.org_remoteclusters.yaml
+# Source: chaos-mesh/crds/chaos-mesh.org_remoteclusters.yaml
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.4.1
+    controller-gen.kubebuilder.io/version: v0.6.1
   creationTimestamp: null
   name: remoteclusters.chaos-mesh.org
 spec:
@@ -3806,8 +3806,8 @@ spec:
             spec:
               properties:
                 configOverride:
-                  format: byte
-                  type: string
+                  type: object
+                  x-kubernetes-preserve-unknown-fields: true
                 kubeConfig:
                   properties:
                     secretRef:
@@ -3853,6 +3853,9 @@ spec:
                   type: array
                 currentVersion:
                   type: string
+                observedGeneration:
+                  format: int64
+                  type: integer
               required:
                 - currentVersion
               type: object
@@ -3867,13 +3870,13 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
-# Source: crds/chaos-mesh.org_schedules.yaml
+# Source: chaos-mesh/crds/chaos-mesh.org_schedules.yaml
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.4.1
+    controller-gen.kubebuilder.io/version: v0.6.1
   creationTimestamp: null
   name: schedules.chaos-mesh.org
 spec:
@@ -11464,13 +11467,13 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
-# Source: crds/chaos-mesh.org_statuschecks.yaml
+# Source: chaos-mesh/crds/chaos-mesh.org_statuschecks.yaml
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.4.1
+    controller-gen.kubebuilder.io/version: v0.6.1
   creationTimestamp: null
   name: statuschecks.chaos-mesh.org
 spec:
@@ -11620,13 +11623,13 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
-# Source: crds/chaos-mesh.org_stresschaos.yaml
+# Source: chaos-mesh/crds/chaos-mesh.org_stresschaos.yaml
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.4.1
+    controller-gen.kubebuilder.io/version: v0.6.1
   creationTimestamp: null
   name: stresschaos.chaos-mesh.org
 spec:
@@ -11862,13 +11865,13 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
-# Source: crds/chaos-mesh.org_timechaos.yaml
+# Source: chaos-mesh/crds/chaos-mesh.org_timechaos.yaml
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.4.1
+    controller-gen.kubebuilder.io/version: v0.6.1
   creationTimestamp: null
   name: timechaos.chaos-mesh.org
 spec:
@@ -12056,13 +12059,13 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
-# Source: crds/chaos-mesh.org_workflownodes.yaml
+# Source: chaos-mesh/crds/chaos-mesh.org_workflownodes.yaml
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.4.1
+    controller-gen.kubebuilder.io/version: v0.6.1
   creationTimestamp: null
   name: workflownodes.chaos-mesh.org
 spec:
@@ -23120,13 +23123,13 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
-# Source: crds/chaos-mesh.org_workflows.yaml
+# Source: chaos-mesh/crds/chaos-mesh.org_workflows.yaml
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.4.1
+    controller-gen.kubebuilder.io/version: v0.6.1
   creationTimestamp: null
   name: workflows.chaos-mesh.org
 spec:
