skip update for registry to wait for sealed secret

--- a/argo-conf/base/kustomization.yaml
+++ b/argo-conf/base/kustomization.yaml
@@ -22,7 +22,7 @@ resources:
 - otel-operator.yaml
 - prometheus.yaml
 - prometheus-crd.yaml
-- registry.yaml
+# - registry.yaml # postpone for first apply in order to regenerate sealed-secret
 - sealed-secret.yaml
 - sealed-secret-crd.yaml
 - tempo.yaml
