--- a/argo-conf/base/kustomization.yaml
+++ b/argo-conf/base/kustomization.yaml
@@ -25,5 +25,5 @@ resources:
 # - registry.yaml # postpone for first apply in order to regenerate sealed-secret
 - sealed-secret.yaml
 - sealed-secret-crd.yaml
-- tempo.yaml
+# - tempo.yaml # postpone for first apply in order to regenerate sealed-secret
 - saiki-tenant.yaml
