--- a/argo-conf/base/cert-manager.yaml
+++ b/argo-conf/base/cert-manager.yaml
@@ -3,17 +3,18 @@ kind: Application
 metadata:
   name: cert-manager
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
+  labels:
+    name: cert-manager
+  annotations:
+    argocd.argoproj.io/sync-wave: "2"
 spec:
   project: default
   source:
-    chart: cert-manager
-    repoURL: https://charts.jetstack.io
-    targetRevision: v1.12.3
-    helm:
-      releaseName: cert-manager
+    repoURL: https://github.com/hanapedia/lab-cluster-apps
+    targetRevision: HEAD
+    path: cert-manager/cert-manager/base
   destination:
     server: "https://kubernetes.default.svc"
     namespace: cert-manager
-  syncPolicy:
-    syncOptions:
-      - CreateNamespace=true
