--- a/argo-conf/base/kustomization.yaml
+++ b/argo-conf/base/kustomization.yaml
@@ -19,4 +19,4 @@ resources:
 # - registry.yaml # postpone for first apply in order to regenerate sealed-secret
 - sealed-secret.yaml
 - sealed-secret-crd.yaml
-# - tempo.yaml # postpone for first apply in order to regenerate sealed-secret
+- tempo.yaml # postpone for first apply in order to regenerate sealed-secret
