--- a/argo-conf/base/kustomization.yaml
+++ b/argo-conf/base/kustomization.yaml
@@ -16,7 +16,7 @@ resources:
 - otel-operator.yaml
 - prometheus.yaml
 - prometheus-crd.yaml
-# - registry.yaml # postpone for first apply in order to regenerate sealed-secret
+- registry.yaml # postpone for first apply in order to regenerate sealed-secret
 - sealed-secret.yaml
 - sealed-secret-crd.yaml
 - tempo.yaml # postpone for first apply in order to regenerate sealed-secret
