--- a/argo-conf/base/kustomization.yaml
+++ b/argo-conf/base/kustomization.yaml
@@ -8,9 +8,11 @@ resources:
 - grafana.yaml
 - kafka-crd.yaml
 - kafka-operator.yaml
-- minio.yaml # postpone for first apply in order to regenerate sealed-secret
+- minio-tempo.yaml
+- minio-mimir.yaml
 - namespaces.yaml
 - openebs.yaml
+- openebs-sc.yaml
 - otel-collector.yaml
 - otel-crd.yaml
 - otel-operator.yaml
