--- a/minio/mimir/values.yaml
+++ b/minio/mimir/values.yaml
@@ -1,3 +1,7 @@
+## Provide a name to substitute for the full names of resources
+##
+fullnameOverride: "minio-mimir"
+
 ## minio mode, i.e. standalone or distributed
 mode: distributed ## other supported values are "standalone"
 
