--- a/minio/tempo/kustomization.yaml
+++ b/minio/tempo/kustomization.yaml
@@ -4,7 +4,6 @@ kind: Kustomization
 
 namespace: monitoring
 
-namePrefix: tempo-
-
 resources:
   - manifests.yaml
+  - tempo-sealed-admin-secret.yaml
