--- a/argo-conf/base/mimir.yaml
+++ b/argo-conf/base/mimir.yaml
@@ -14,7 +14,7 @@ spec:
   project: default
 
   # Source of the application manifests
-  source:
+  sources:
     - chart: mimir-distributed
       repoURL: https://grafana.github.io/helm-charts
       targetRevision: 5.4.0
