--- a/minio/mimir/values.yaml
+++ b/minio/mimir/values.yaml
@@ -125,3 +125,11 @@ buckets:
 metrics:
   serviceMonitor:
     enabled: true
+
+## Specify the service account to use for the MinIO pods. If 'create' is set to 'false'
+## and 'name' is left unspecified, the account 'default' will be used.
+serviceAccount:
+  create: true
+  ## The name of the service account to use. If 'create' is 'true', a service account with that name
+  ## will be created.
+  name: "minio-mimir-sa"
