--- a/minio/mimir/manifests.yaml
+++ b/minio/mimir/manifests.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: "minio-sa"
+  name: "minio-mimir-sa"
 ---
 # Source: minio/templates/configmap.yaml
 apiVersion: v1
@@ -506,7 +506,7 @@ spec:
         runAsGroup: 1000
         fsGroup: 1000
         fsGroupChangePolicy: OnRootMismatch
-      serviceAccountName: minio-sa
+      serviceAccountName: minio-mimir-sa
       containers:
         - name: minio
           image: quay.io/minio/minio:RELEASE.2024-04-18T19-09-19Z
@@ -612,7 +612,7 @@ spec:
                   name: minio-mimir
               - secret:
                   name: minio-mimir
-      serviceAccountName: minio-sa
+      serviceAccountName: minio-mimir-sa
       containers:
         - name: minio-make-bucket
           image: "quay.io/minio/mc:RELEASE.2024-04-18T16-45-29Z"
