minio: add buckets for mimir

--- a/argo-conf/base/mimir.yaml
+++ b/argo-conf/base/mimir.yaml
@@ -28,4 +28,4 @@ spec:
       ref: values
   destination:
     server: "https://kubernetes.default.svc"
-    namespace: cert-manager
+    namespace: monitoring
