--- a/mimir/capacity.yaml
+++ b/mimir/capacity.yaml
@@ -26,6 +26,7 @@
 alertmanager:
   persistentVolume:
     enabled: true
+    storageClass: "openebs-hostpath"
   replicas: 2
   resources:
     limits:
@@ -39,6 +40,7 @@ alertmanager:
 compactor:
   persistentVolume:
     size: 20Gi
+    storageClass: "openebs-hostpath"
   resources:
     limits:
       memory: 2.1Gi
@@ -58,6 +60,7 @@ distributor:
 ingester:
   persistentVolume:
     size: 20Gi
+    storageClass: "openebs-hostpath"
   replicas: 2
   resources:
     limits:
@@ -149,6 +152,7 @@ ruler:
 store_gateway:
   persistentVolume:
     size: 10Gi
+    storageClass: "openebs-hostpath"
   replicas: 3
   resources:
     limits:
