mimir: disable zone aware replication

--- a/mimir/zones.yaml
+++ b/mimir/zones.yaml
@@ -1,23 +1,7 @@
 ingester:
   zoneAwareReplication:
-    enabled: true
-    topologyKey: kubernetes.io/hostname
-    zones:
-      - name: zone-lab1
-        nodeSelector:
-          topology.kubernetes.io/zone: lab1
-      - name: zone-lab2
-        nodeSelector:
-          topology.kubernetes.io/zone: lab2
+    enabled: false
 
 store_gateway:
   zoneAwareReplication:
-    enabled: true
-    topologyKey: kubernetes.io/hostname
-    zones:
-      - name: zone-lab1
-        nodeSelector:
-          topology.kubernetes.io/zone: lab1
-      - name: zone-lab2
-        nodeSelector:
-          topology.kubernetes.io/zone: lab2
+    enabled: false
