prometheus: replace with helm

--- a/prometheus/values.yaml
+++ b/prometheus/values.yaml
@@ -13,6 +13,10 @@ prometheus:
     podMonitorSelectorNilUsesHelmValues: false
     serviceMonitorSelectorNilUsesHelmValues: false
     enableRemoteWriteReceiver: true
+    remoteWrite:
+      - name: mimir
+        url: http://mimir-distributor.monitoring.svc:8080/api/v1/push
+        sendNativeHistograms: true
 
 ## Configuration for Grafana
 ## Using default values from https://github.com/grafana/helm-charts/blob/main/charts/grafana/values.yaml
