--- a/argo-conf/base/prometheus.yaml
+++ b/argo-conf/base/prometheus.yaml
@@ -10,11 +10,21 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "4"
 spec:
+  # The project the application belongs to.
   project: default
-  source:
-    repoURL: https://github.com/hanapedia/lab-cluster-apps
-    targetRevision: HEAD
-    path: prometheus/prometheus/base
+
+  # Source of the application manifests
+  sources:
+    - chart: kube-prometheus-stack
+      repoURL: https://prometheus-community.github.io/helm-charts
+      targetRevision: 61.3.2
+      helm:
+        releaseName: prometheus
+        valueFiles:
+          - $values/prometheus/values.yaml
+    - repoURL: https://github.com/hanapedia/lab-cluster-apps
+      targetRevision: HEAD
+      ref: values
   destination:
     server: "https://kubernetes.default.svc"
     namespace: monitoring
