--- a/prometheus/values.yaml
+++ b/prometheus/values.yaml
@@ -17,6 +17,8 @@ prometheus:
       - name: mimir
         url: http://mimir-distributor.monitoring.svc:8080/api/v1/push
         sendNativeHistograms: true
+        headers:
+          X-Scope-OrgID: main
 
 ## Configuration for Grafana
 ## Using default values from https://github.com/grafana/helm-charts/blob/main/charts/grafana/values.yaml
