--- a/prometheus/values.yaml
+++ b/prometheus/values.yaml
@@ -15,7 +15,7 @@ prometheus:
     enableRemoteWriteReceiver: true
     remoteWrite:
       - name: mimir
-        url: http://mimir-distributor.monitoring.svc:8080/api/v1/push
+        url: http://mimir-nginx.monitoring.svc/api/v1/push
         sendNativeHistograms: true
         headers:
           X-Scope-OrgID: main
