--- a/grafana/base/datasources/datasources.yaml
+++ b/grafana/base/datasources/datasources.yaml
@@ -6,3 +6,6 @@ datasources:
 - name: Tempo
   type: tempo
   url: http://tempo-query-frontend.monitoring.svc.cluster.local:3100
+- name: Mimir
+  type: prometheus
+  url: http://mimir-nginx.monitoring.svc.cluster.local/prometheus
