--- a/namespaces/base/namespaces.yaml
+++ b/namespaces/base/namespaces.yaml
@@ -25,3 +25,10 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: chaos-mesh
+
+---
+# Namespace for tailscale
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: tailscale
