grafana: use helm

--- a/argo-conf/base/grafana.yaml
+++ b/argo-conf/base/grafana.yaml
@@ -11,10 +11,17 @@ metadata:
     argocd.argoproj.io/sync-wave: "4"
 spec:
   project: default
-  source:
-    repoURL: https://github.com/hanapedia/lab-cluster-apps
-    targetRevision: HEAD
-    path: grafana/base
+  sources:
+    - chart: grafana
+      repoURL: https://grafana.github.io/helm-charts
+      targetRevision: 8.3.6
+      helm:
+        releaseName: grafana
+        valueFiles:
+          - $values/grafana/values.yaml
+    - repoURL: https://github.com/hanapedia/lab-cluster-apps
+      targetRevision: HEAD
+      ref: values
   destination:
     server: "https://kubernetes.default.svc"
     namespace: monitoring
